samples/_failures_safe/1761280269_d7c81d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5f751394.c: In function ‘main’:
./samples/SAFE/__tmp_5f751394.c:124:5: error: expected declaration or statement at end of input
  124 |     printf("\nMagnitude: %.3f\n", result.magnitude_transformed);
      |     ^~~~~~
